--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="please_wait">Please Wait</string>
     <string name="something_went_wrong">Something went wrong</string>
     <string name="okay">Okay</string>
+    <string name="add_post">Add post</string>
 </resources>
