--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Old Book Store</string>
     <string name="email_id">Email ID</string>
     <string name="loginBody">Login</string>
@@ -21,7 +21,6 @@
     <string name="published_by">Published by: %1$s</string>
     <string name="price">%1$s BDT</string>
     <string name="available">Available</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title">Title</string>
     <string name="more">More</string>
@@ -39,4 +38,5 @@
     <string name="something_went_wrong">Something went wrong</string>
     <string name="okay">Okay</string>
     <string name="add_post">Add post</string>
+    <string name="images_count">%1$s/%2$s</string>
 </resources>
